Update daily.html with new entries and improved formatting
- Revamped the daily entries section in daily.html, adding multiple new entries with enhanced descriptions and emotional context.
- Organized the entries into a nested list for better readability and structure.
- Removed outdated entries to keep the content fresh and relevant.

--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -12,16 +12,28 @@
             <p>这里是一些日常记录。</p>
             <ul>
                 <!-- 示例：<li>2024-12-20: 今天天气不错，心情很好。</li> -->
-                <li>2025-01-01：新年快乐</li>
-                <hr>
-                <li>2024-12-31：新年快乐</li>
-                <li>2024-12-20：前端页面太丑了，所以赶工改了一下</li>
-                <li>2024-12-10：才反应过来。我的域名不正适合建资源站吗？所以建了个资源站<a href="https://file.ziyuan77.com" target="_blank"> file.ziyuan77.com </a></li>
-                <li>2024-12-05：找了一台不用的电脑，搞了台自己的服务器</li>
-                <li>2024-11-29：开始自己建站</li>
-                <li>2024-11-24：给域名解析上了</li>
-                <li>2024-11-22：今天天气不错，心情很好。</li>
-                <li>2024-11-21: 成功在同学的怂恿下建立了自己的网站，虽然很简陋，但是还是很有成就感的。顺便说一句，这是同学的网站：<a href="https://xhdndmm.cn"> xhdndmm.cn </a></li>
+                <ul>
+                    <li>2025-01-01：新年快乐！愿新的一年充满希望与欢乐。</li>
+                    <hr>
+                    <li>2024-12-31：新年快乐！愿来年一切顺利。</li>
+                    <li>2024-12-30：今天完成了一个重要的项目，心情大好。</li>
+                    <li>2024-12-26：今天的天气特别冷，窝在家里看书。</li>
+                    <li>2024-12-25：圣诞节快乐！和家人一起度过了温馨的一天。</li>
+                    <li>2024-12-24：为明天的圣诞节做准备，装饰了圣诞树。</li>
+                    <li>2024-12-22：冬至到了，吃了饺子，暖暖的。</li>
+                    <li>2024-12-20：前端页面太丑了，所以赶工改了一下。希望新设计能让人眼前一亮。</li>
+                    <li>2024-12-19：今天的工作效率特别高，完成了很多任务。</li>
+                    <li>2024-12-16：今天的心情有点低落，但还是努力振作。</li>
+                    <li>2024-12-14：今天的天气特别好，出去散步了一圈。</li>
+                    <li>2024-12-10：才反应过来。我的域名不正适合建资源站吗？所以建了个资源站<a href="https://file.ziyuan77.com" target="_blank"> file.ziyuan77.com </a>。真是个绝妙的主意！</li>
+                    <li>2024-12-09：今天的心情特别好，做什么都很顺利。</li>
+                    <li>2024-12-05：找了一台不用的电脑，搞了台自己的服务器。DIY的乐趣无穷。</li>
+                    <li>2024-12-04：今天的天气有点阴沉，但心情还不错。</li>
+                    <li>2024-11-29：开始自己建站。虽然过程艰辛，但每一步都充满了成就感。</li>
+                    <li>2024-11-24：给域名解析上了。终于迈出了重要的一步。</li>
+                    <li>2024-11-22：今天天气不错，心情很好。阳光明媚，心情舒畅。</li>
+                    <li>2024-11-21: 成功在同学的怂恿下建立了自己的网站，虽然很简陋，但是还是很有成就感的。顺便说一句，这是同学的网站：<a href="https://xhdndmm.cn"> xhdndmm.cn </a>。感谢朋友的鼓励与支持！</li>
+                </ul>
             </ul>
         </div>
         <script src="/static/js/daily.js"></script>
