--- a/app/templates/cmd_commands.html
+++ b/app/templates/cmd_commands.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>常用控制台命令及其参数</h1>
+    <div class="search-container">
+        <input type="text" id="search-input" placeholder="搜索命令...">
+        <div class="search-options">
+            <label><input type="checkbox" id="search-description"> 搜索描述</label>
+            <label><input type="checkbox" id="search-params"> 搜索参数</label>
+        </div>
+    </div>
     <p>这里提供一些常用的控制台命令及其参数的详细说明。</p>
     <a href="/text"><img src="/static/images/back.png" alt="logo" /></a>
     <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
@@ -2579,5 +2586,6 @@
 </div>
 <!-- ... end of new commands ... -->
     </div>
+    <script src="/static/js/cmd_commands.js"></script>
 </body>
 </html>
