Update daily.html to correct formatting of the January 10, 2025 entry, ensuring proper display of website update details and links. This change enhances readability and maintains consistency in the daily records.

--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -12,7 +12,7 @@
             <p>这里是一些日常记录。</p>
             <ul>
                 <!-- 示例：<li>2024-12-20: 今天天气不错，心情很好。</li> -->
-                    <li>还尝试录屏公开更改过程，可以>2025-01-10：期末考试结束，大改了网站，在这里加了很多工具，可以<a href="/tools" target="_blank">看看</a>，还尝试录屏公开更改过程，可以<a href="https://file.ziyuan77.com/网站更新/1月10日网站大改，8分钟加速版.mov" target="_blank">看看</a>。也在准备放到B站上。</li>
+                    <li>2025-01-10：期末考试结束，大改了网站，在这里加了很多工具，可以<a href="/tools" target="_blank">看看</a>，还尝试录屏公开更改过程，可以<a href="https://file.ziyuan77.com/网站更新/1月10日网站大改，8分钟加速版.mov" target="_blank">看看</a>。也在准备放到B站上。</li>
                     <li>2025-01-01：新年快乐！愿新的一年充满希望与欢乐。</li>
                     <hr>
                     <li>2024-12-31：新年快乐！愿来年一切顺利。</li>
