--- a/app/templates/ssh_commands.html
+++ b/app/templates/ssh_commands.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="/text"><img src="/static/images/back.png" alt="logo" /></a>
-    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+    <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
     <h1>常用SSH命令及其参数</h1>
     <div class="command-list">
         <div class="command">
