--- a/app/templates/text.html
+++ b/app/templates/text.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/static/css/project.css" />
     </head>
     <body>
-        <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+        <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
         <a href="/projects"><img src="/static/images/back.png" alt="logo" /></a>
         <div class="container">
             <h1>文档</h1>
