--- a/app/templates/web.html
+++ b/app/templates/web.html
@@ -10,7 +10,7 @@
     <header>
         <h1>建站教程</h1>
         <p>从零开始创建你的网站</p>
-        <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+        <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
         <a href="/text"><img src="/static/images/back.png" alt="logo" /></a>
     </header>
     <nav>
