--- a/app/templates/math.html
+++ b/app/templates/math.html
@@ -8,7 +8,7 @@
 <body>
     <h1>数学题目生成器</h1>
     <a href="/tools"><img src="/static/images/back.png" alt="logo" /></a>
-    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+    <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
     <div class="form-group">
         <label for="numQuestions">题目数量:</label>
         <input type="number" id="numQuestions" min="1" value="10">
