--- a/app/templates/password.html
+++ b/app/templates/password.html
@@ -9,7 +9,7 @@
     <body>
         <h1>安全密码生成器</h1>
         <a href="/tools"><img src="/static/images/back.png" alt="logo" /></a>
-        <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+        <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
         <canvas id="clockCanvas" width="200" height="200"></canvas>
         <div id="currentTime"></div>
         <form id="passwordForm" method="post" action="/password">
