--- a/app/templates/worldtime.html
+++ b/app/templates/worldtime.html
@@ -9,7 +9,7 @@
 <body>
     <h1>世界时区时钟</h1>
     <a href="/tools"><img src="/static/images/back.png" width="32" alt="logo" /></a>
-    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+    <a href="/index"><img src="/static/images/home.png" alt="logo" /></a>
     <div class="clock-container">
         <div class="clock">
             <h2>贝克岛时间 (UTC-12)</h2>
