--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,8 +16,8 @@
                     <li><a href="https://blog.ziyuan77.com" target="_blank">博客</a></li>
                     <li><a href="/gomoku">五子棋，可联机对战</a></li>
                     <li><a href="/cmd_commands">常用控制台命令及其参数</a></li>
-                    <li><a href="https://file.ziyuan77.com/网站更新" target="_blank">网站更新</a></li>
-                    <li><a href="https://github.com/felixchioa/ziyuan77-web_flask" target="_blank">网站源码</a></li>
+                    <li><a href="/update">网站更新</a></li>
+                    <li><a href="/github">网站源码</a></li>
                 </ul>
             </div>
             <div class="content">
