--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -24,8 +24,7 @@
             </ul>
             <ul>
                 <p>和别人搞的聊天室</p>
-                <a href="https://github.com/xhdndmm/chat.git" target="_blank"> github下载（最新） </a>
-                <a helf="https://file.ziyuan77.com/d/home/ziyuan77/chat-main.zip?sign=S-07vVD9QE-ch4hlfln-hIbq8ynLXrcmTnsLVQgUE6U=:0" target="_blank"> 资源站下载（不是最新但大陆地区稳定） </a>
+                <a href="/github_chat"> github下载（最新） </a>
             </ul>
             <ul>
                 <p>五子棋</p>
@@ -33,7 +32,7 @@
             </ul>
             <ul>
                 <p>下载器</p>
-                <a href="ghttps://github.com/xhdndmm/miaobox"> 下载器 </a>
+                <a href="/github_miaobox"> 下载器 </a>
             </ul>
         </div>
         <script src="/static/js/project.js"></script>
