--- a/app/templates/tools.html
+++ b/app/templates/tools.html
@@ -16,7 +16,7 @@
         <div class="tools-grid">
             <a href="https://photo.ziyuan77.com" class="tool-card" target="_blank">
                 <h3>证件照生成器</h3>
-                <p>在线证件照生成器，提供你的照片，生成证件照</p>
+                <p>在线证件照生成器，提供你的照片，生成证件照，推荐抠图模型：birefnet-v1-lite</p>
             </a>
             <a href="/password" class="tool-card">
                 <h3>安全密码生成器</h3>
